k8s/apps/development/demo/demo.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demo
  namespace: development
spec:
  hosts:
    - "demo.${SECRET_DOMAIN}"
  http:
    - name: default
      route:
        - destination:
          host: demo.development.svc.cluster.local
---
apiVersion: v1
kind: Service
metadata:
  name: demo
  namespace: development
spec:
  selector:
    app: demo-app
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app
  namespace: development
  labels:
    app: demo-app
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-app
      version: v1
  template:
    metadata:
      labels:
        app: demo-app
        version: v1
    spec:
      containers:
        - name: main
          image: "${SECRET_DOCKER_PRIVATE_REGISTRY}/demo:0.0.1"
